odkazy a obrazky na hlavni strance

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <h1>Ing. Dromik's Web</h1>
 
 <p>Hello i am Dromik and this is my web.</p>
+<p>My pages :
+</p>
+<img src="bts-1.jpg" width="30%"><br>
+<a href="bts.html">BTS Informations</a><br>
+<img src="to-do-list.png" width="30%"><br>
+<a href="bucketlist.html">My winter bucketlist</a>
 
 
 </body>
