--- a/bucketlist.html
+++ b/bucketlist.html
@@ -2,20 +2,22 @@
 <html>
 
 <head>
-    <title>Bucket list</title>
+    <title>Bucket lists</title>
     <meta charset="utf-8">
 </head>
 
 <body style="background-color:#f5f3f5;">
 
-    <h1>Bucket list</h1>
+    <h1> Winter bucket list</h1>
 
     <div>
+        <h2>October</H2>
         <input type="checkbox">
-        <label>I have a bike</label>
+
+        <label></label>
     </div>
     <div>
-        <input type="radio">
+        <input type="checkbox">
         <label> I have a prd</label><br>
     </div>
     </div>
