updated bucket list

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -14,11 +14,48 @@
         <h2>October</H2>
         <input type="checkbox">
 
-        <label></label>
+        <label>create a budget</label>
     </div>
     <div>
         <input type="checkbox">
-        <label> I have a prd</label><br>
+        <label>Plans for a decoration</label><br>
+        <input type="checkbox">
+        <label>To plan food</label><br>
+        <input type="checkbox">
+        <label>Create a wish list list </label><br>
+        <input type="checkbox">
+        <label>To take photo of christmas wishes</label><br>
+        <h2>November</h2>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+        <input type="checkbox">
+        <label></label><br>
+
+
+
+
+
+
+
+
     </div>
     </div>
 
