--- a/bucketlist.html
+++ b/bucketlist.html
@@ -14,7 +14,7 @@
         <h2>October</H2>
         <input type="checkbox">
 
-        <label>create a budget</label>
+        <label>Create a budget</label>
     </div>
     <div>
         <input type="checkbox">
@@ -27,11 +27,11 @@
         <label>To take photo of christmas wishes</label><br>
         <h2>November</h2>
         <input type="checkbox">
-        <label></label><br>
+        <label>Create a Christmas decoration</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>Buy a gift paper</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>Write</label><br>
         <input type="checkbox">
         <label></label><br>
         <input type="checkbox">
