--- a/bucketlist.html
+++ b/bucketlist.html
@@ -20,7 +20,7 @@
         <input type="checkbox">
         <label>Plans for a decoration</label><br>
         <input type="checkbox">
-        <label>To plan food</label><br>
+        <label>Plan a meal for Christmas eve</label><br>
         <input type="checkbox">
         <label>Create a wish list list </label><br>
         <input type="checkbox">
@@ -29,9 +29,9 @@
         <input type="checkbox">
         <label>Create a Christmas decoration</label><br>
         <input type="checkbox">
-        <label>Buy a gift paper</label><br>
+        <label>Buy a wraping paper</label><br>
         <input type="checkbox">
-        <label>Write</label><br>
+        <label>Write list for christmas food</label><br>
         <input type="checkbox">
         <label></label><br>
         <input type="checkbox">
