--- a/bucketlist.html
+++ b/bucketlist.html
@@ -33,15 +33,16 @@
         <input type="checkbox">
         <label>Write list for christmas food</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>start shopping for gifts</label><br>
+        <h2>December</2>
         <input type="checkbox">
-        <label></label><br>
+        <label>Buy a tree</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>Make (decorate) the decoration</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>Bake cookies</label><br>
         <input type="checkbox">
-        <label></label><br>
+        <label>Plan and write a timeline of the bounty day</label><br>
         <input type="checkbox">
         <label></label><br>
         <input type="checkbox">
