--- a/bucketlist.html
+++ b/bucketlist.html
@@ -34,7 +34,7 @@
         <label>Write list for christmas food</label><br>
         <input type="checkbox">
         <label>start shopping for gifts</label><br>
-        <h2>December</2>
+        <h2>December</h2>
         <input type="checkbox">
         <label>Buy a tree</label><br>
         <input type="checkbox">
