--- a/bucketlist.html
+++ b/bucketlist.html
@@ -43,14 +43,10 @@
         <label>Bake cookies</label><br>
         <input type="checkbox">
         <label>Plan and write a timeline of the bounty day</label><br>
-        
 
+        <h1><b style="color:rgb(19, 36, 233);"><strong>Merry christmas !!!</strong></b></h1>
 
-
-
-
-
-
+        <img src="merry-christmas.jpg" width="80%"><br>
 
     </div>
     </div>
