--- a/bts.html
+++ b/bts.html
@@ -4,6 +4,7 @@
 <head>
   <title>BTS Info</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body style="background-color:#f2daf9;">
