--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Ing. Dromik's Web</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body style="background-color:#f5f3f5;">
