--- a/bts.html
+++ b/bts.html
@@ -5,13 +5,18 @@
   <title>BTS Info</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      background-color:#e7e1fa;
+    }
+    
+    li {
+      font-weight: bold;
+    }
+    </style>
 </head>
 
-<body style="background-color:#f2daf9;">
-
-  <h1>Moje stránky</h1>
-
-  Můj <a href="bucketlist.html">bucketlist</a>.
+<body>
 
   <h1>BTS 방탄소년단</h1>
 
@@ -26,7 +31,7 @@
     <li>Suga</li>
     <li>V</li>
   </ul>
-  <p>Bts je <b style="color:rgb(244, 62, 232);">hudební skupina</b> a pochází z jižní korei od roku 2013.</p>
+  <p>Bts je <b style="color:rgb(212, 47, 201);">hudební skupina</b> a pochází z jižní korei od roku 2013.</p>
   <p>můj nejoblíbenějíší člen BTS je <b>Jungkook</b>.</p>
   <p>Moje nejoblíbenějíší písničky:</p>
   <ul>
