--- a/Avengers.html
+++ b/Avengers.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>BTS Info</title>
+  <title>Avengers</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color:#e7e1fa;
+      background-color:#d0f2fe;
     }
     
     li {
