pridavani avengers do index

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <img src="bts-1.jpg" width="30%"><br>
 <a href="bts.html">BTS Informations</a><br>
 <img src="to-do-list.png" width="30%"><br>
-<a href="bucketlist.html">My winter bucketlist</a>
-<a href="Avengers.html">something about Avengers</a>
+<a href="bucketlist.html">My winter bucketlist</a><br>
+<img src="avengers.jpg" width="30%"><br>
+<a href="Avengers.html">something about Avengers</a><br>
 
 </body>
 
