--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a href="bts.html">BTS Informations</a><br>
 <img src="to-do-list.png" width="30%"><br>
 <a href="bucketlist.html">My winter bucketlist</a><br>
-<img src="avengers.jpg" width="30%"><br>
+<img src="avengers logo.jpg" width="30%"><br>
 <a href="Avengers.html">something about Avengers</a><br>
 
 </body>
