--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>BTS Info</title>
+  <title>Alea Aquarius</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color:#e7e1fa;
+      background-color:#cedef6;
     }
     
     li {
@@ -17,4 +17,5 @@
 </head>
 
 <body>
+    <h1><em>Alea Aquarius</em></h1>
 </body>
