--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a href="bucketlist.html">My winter bucketlist</a><br>
 <img src="avengers logo.jpg" width="30%"><br>
 <a href="Avengers.html">something about Avengers</a><br>
-<img src="c:\Users\annak\OneDrive\Obrázky\universe-1 - Copy.jpg" width="30%"><br>
+<img src="" width="30%"><br>
 <a href="universe.html">The Universe</a><br>
 </body>
 
