--- a/universe.html
+++ b/universe.html
@@ -11,6 +11,7 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    background-color: rgba(0,0,0,0.5);
     }
     
     li {
