--- a/universe.html
+++ b/universe.html
@@ -9,7 +9,7 @@
     body {
       background-image: url('pictures/moje-fotka.jpg');
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
     }
     
