--- a/universe.html
+++ b/universe.html
@@ -2,23 +2,25 @@
 <html>
 
 <head>
-  <title>The Universe</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background-image: url('pictures/moje-fotka.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    }
-    
-    li {
-      font-weight: bold;
-    }
+    <title>The Universe</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-image: url('pictures/moje-fotka.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: repeat;
+            opacity: 0.5;
+            color:aliceblue;
+        }
+
+        li {
+            font-weight: bold;
+        }
     </style>
 </head>
 
 <body>
-
+    <h1>Ahoj</h1>
 </body>
