--- a/universe.html
+++ b/universe.html
@@ -21,10 +21,9 @@
 </head>
 
 <body>
-    <div>
+    justify-content: center;
         <h1>The Universe</h1>
-    </div>
-
+       
     
 
 </body>
