--- a/universe.html
+++ b/universe.html
@@ -17,11 +17,14 @@
         li {
             font-weight: bold;
         }
+        h1 {
+     text-align: center;
+        }
     </style>
 </head>
 
 <body>
-    justify-content: center;
+   
         <h1>The Universe</h1>
        
     
