--- a/universe.html
+++ b/universe.html
@@ -18,6 +18,7 @@
             font-weight: bold;
         }
         h1 {
+            text-align: center;      
      text-align: justify;
         }
     </style>
