--- a/planet_orbit.html
+++ b/planet_orbit.html
@@ -12,6 +12,8 @@
       height: 100vh;
       background-color: black;
       margin: 0;
+      color: white;
+      font-family: 'Arial', sans-serif;
     }
     canvas {
       border: 1px solid white;
@@ -20,26 +22,28 @@
   </style>
 </head>
 <body>
+  <h1>Planetary Orbit Simulator</h1>
   <canvas id="orbitCanvas" width="800" height="800"></canvas>
   <script>
     const canvas = document.getElementById('orbitCanvas');
     const ctx = canvas.getContext('2d');
 
-    const SUN_RADIUS = 20;
+    const SUN_RADIUS = 30;
     const CENTER_X = canvas.width / 2;
     const CENTER_Y = canvas.height / 2;
 
-    // Planet data: distance from the sun, size, speed, color
+    // Define planets with detailed properties
     const planets = [
-      { distance: 60, size: 5, speed: 0.04, color: 'gray' }, // Mercury
-      { distance: 100, size: 8, speed: 0.03, color: 'orange' }, // Venus
-      { distance: 150, size: 9, speed: 0.02, color: 'blue' }, // Earth
-      { distance: 200, size: 7, speed: 0.015, color: 'red' }, // Mars
-      { distance: 300, size: 15, speed: 0.008, color: 'brown' } // Jupiter
+      { name: 'Mercury', distance: 60, size: 5, speed: 0.04, color: 'gray' },
+      { name: 'Venus', distance: 100, size: 8, speed: 0.03, color: 'orange' },
+      { name: 'Earth', distance: 150, size: 9, speed: 0.02, color: 'blue' },
+      { name: 'Mars', distance: 200, size: 7, speed: 0.015, color: 'red' },
+      { name: 'Jupiter', distance: 300, size: 15, speed: 0.008, color: 'brown' }
     ];
 
     let angleOffsets = planets.map(() => Math.random() * Math.PI * 2);
 
+    // Draw the Sun at the center
     function drawSun() {
       ctx.beginPath();
       ctx.arc(CENTER_X, CENTER_Y, SUN_RADIUS, 0, Math.PI * 2);
@@ -48,17 +52,25 @@
       ctx.closePath();
     }
 
+    // Draw planet at a given angle and position
     function drawPlanet(planet, angle) {
       const x = CENTER_X + planet.distance * Math.cos(angle);
       const y = CENTER_Y + planet.distance * Math.sin(angle);
 
+      // Draw planet
       ctx.beginPath();
       ctx.arc(x, y, planet.size, 0, Math.PI * 2);
       ctx.fillStyle = planet.color;
       ctx.fill();
       ctx.closePath();
+
+      // Label the planet
+      ctx.fillStyle = 'white';
+      ctx.font = '12px Arial';
+      ctx.fillText(planet.name, x + 10, y);
     }
 
+    // Draw the orbital path of a planet
     function drawOrbit(distance) {
       ctx.beginPath();
       ctx.arc(CENTER_X, CENTER_Y, distance, 0, Math.PI * 2);
@@ -67,6 +79,7 @@
       ctx.closePath();
     }
 
+    // Update and animate the scene
     function update() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -78,7 +91,7 @@
         drawOrbit(planet.distance);
         drawPlanet(planet, angleOffsets[index]);
 
-        // Update planet angle
+        // Update planet angle for animation
         angleOffsets[index] += planet.speed;
       });
 
