--- a/planet_orbit.html
+++ b/planet_orbit.html
@@ -32,7 +32,7 @@
     const CENTER_X = canvas.width / 2;
     const CENTER_Y = canvas.height / 2;
 
-    // Define planets with slowed down orbital speeds and textures
+    // Define planets with slowed down orbital speeds and textures (placeholders)
     const planets = [
       { name: 'Mercury', distance: 50, size: 3, speed: 0.01, color: '#b2b2b2', texture: 'textures/mercury.jpg' },
       { name: 'Venus', distance: 80, size: 7, speed: 0.008, color: '#f4a460', texture: 'textures/venus.jpg' },
@@ -45,21 +45,22 @@
     ];
 
     let angleOffsets = planets.map(() => Math.random() * Math.PI * 2);
-    
-    // Load all the planet textures
+
+    // Load all the planet textures (placeholder URLs for testing)
     const planetTextures = {};
     const texturesLoaded = planets.map(planet => {
       const img = new Image();
-      img.src = planet.texture;
+      img.src = planet.texture; // Replace with actual path to texture images
       planetTextures[planet.name] = img;
       return new Promise((resolve) => {
         img.onload = resolve;
+        img.onerror = () => resolve();  // Handle error if image fails to load
       });
     });
 
-    // Load all textures first
+    // Wait for all textures to load before updating the canvas
     Promise.all(texturesLoaded).then(() => {
-      update();
+      update();  // Start animation once all textures are loaded
     });
 
     function drawSun() {
@@ -79,10 +80,10 @@
       const y = CENTER_Y + planet.distance * Math.sin(angle);
 
       // If the planet has a texture, use the image texture
-      if (planetTextures[planet.name]) {
+      if (planetTextures[planet.name] && planetTextures[planet.name].complete) {
         ctx.drawImage(planetTextures[planet.name], x - planet.size, y - planet.size, planet.size * 2, planet.size * 2);
       } else {
-        // Fallback to gradient if no texture
+        // Fallback to color if no texture or if texture isn't loaded yet
         const planetGradient = ctx.createRadialGradient(x, y, 0, x, y, planet.size);
         planetGradient.addColorStop(0, planet.color);
         planetGradient.addColorStop(1, 'black'); // Shadow effect
