--- a/universe.html
+++ b/universe.html
@@ -1,3 +1,32 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Planetary Orbit Simulator</title>
+
+  <!-- Link to the favicon -->
+  <link rel="icon" href="favicon.png" type="image/png">
+  
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: black;
+      margin: 0;
+      color: white;
+      font-family: 'Arial', sans-serif;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to the Universe Explorer!</h1>
+</body>
+</html>
+
 <!DOCTYPE html>
 <html>
 
